--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
+* {
+  margin: 0;
+}
+
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  background-color: rgb(36, 36, 36);
 }
