(feat) add movie detail section

--- a/src/style/Nav.scss
+++ b/src/style/Nav.scss
@@ -40,6 +40,11 @@
             }
         }
     }
+}
 
-
+.footer {
+    height: 5vh;
+    background-color: black;
+    box-sizing: border-box;
+    border-top: 0.2rem solid white;
 }
