--- a/src/style/HomeSection.scss
+++ b/src/style/HomeSection.scss
@@ -45,7 +45,7 @@
 
             margin: 1rem;
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            font-size: 1.1vw;
+            font-size: 1vw;
             color: white;
             height: 18vh;
             overflow-y: hidden;
@@ -60,7 +60,6 @@
             .block {
 
                 background-color: rgb(71, 71, 71);
-                background-size: 10rem;
                 border-radius: 0.5rem;
 
                 .genre {
@@ -96,69 +95,76 @@
     .recentMovie {
         position: relative;
 
+        .link {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+
         img {
             height: 30rem;
-        }
-
-        .modal {
-            position: absolute;
-            background-color: rgba(0, 0, 0, 0.678);
-            border-top-left-radius: 1rem;
-            border-top-right-radius: 1rem;
-
-            bottom: 0;
-            width: 100%;
-
-            .modalBody {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 2vh;
-                text-align: center;
-
-                margin: 1rem;
-                margin-bottom: 2rem;
-
-                .infoFlexboxModal {
-                    display: flex;
-                    flex-direction: row;
-                    gap: 1vw;
-                }
-
-                .modalGenreSection {
-                    display: flex;
-                    flex-direction: row;
-                    flex-wrap: wrap;
-                    gap: 0.3vw;
-                    align-items: center;
-                    justify-content: center;
-
-                }
-
-                .modalGenreBlock {
-                    background-color: rgba(75, 75, 75, 0.856);
-                    border-radius: 0.2rem;
-
-                    h1 {
-                        color: white;
-                        font-size: medium;
-                        padding: 0.4rem;
-                        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
-                    }
-                }
-
-                h1 {
-                    color: white;
-                }
-
-                h2 {
-                    font-size: xx-large;
-                    color: white;
-                }
-            }
-
-
+            width: 20rem;
         }
     }
+}
+
+.modal {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.678);
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+
+    bottom: 0;
+    width: 100%;
+
+    .modalBody {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2vh;
+        text-align: center;
+
+        margin: 1rem;
+        margin-bottom: 2rem;
+
+        .infoFlexboxModal {
+            display: flex;
+            flex-direction: row;
+            gap: 1vw;
+        }
+
+        .modalGenreSection {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            gap: 0.3vw;
+            align-items: center;
+            justify-content: center;
+
+        }
+
+        .modalGenreBlock {
+            background-color: rgba(75, 75, 75, 0.856);
+            border-radius: 0.2rem;
+
+            h1 {
+                color: white;
+                font-size: medium;
+                padding: 0.4rem;
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+            }
+        }
+
+        h1 {
+            color: white;
+        }
+
+        h2 {
+            font-size: xx-large;
+            color: white;
+        }
+    }
+
+
 }
