--- a/src/style/HomeSection.scss
+++ b/src/style/HomeSection.scss
@@ -82,6 +82,7 @@
     gap: 25px;
 
     h2 {
+        margin: 1vh;
         color: white;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
@@ -90,9 +91,11 @@
         display: flex;
         flex-direction: row;
         overflow-y: scroll;
+        scrollbar-width: thin;
+        scroll-behavior: smooth;
     }
 
-    .recentMovie {
+    .movie {
         position: relative;
 
         .link {
