(feat) add filter by genre in movie section

--- a/src/style/HomeSection.scss
+++ b/src/style/HomeSection.scss
@@ -161,10 +161,12 @@
 
         h1 {
             color: white;
+            font-size: x-large;
+
         }
 
         h2 {
-            font-size: xx-large;
+            font-size: larger;
             color: white;
         }
     }
