--- a/src/style/MoviesSectionStyle.scss
+++ b/src/style/MoviesSectionStyle.scss
@@ -57,9 +57,52 @@
         }
     }
 
+    .filterTitle {
+        margin-top: 5vh;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        h2 {
+            margin: 1vh;
+            color: white;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
+
+        svg {
+            height: 4vh;
+        }
+    }
+
+    .filterButtonSection {
+        margin-top: 2vh;
+        margin-left: 1vw;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 10px;
+        align-items: center;
+        min-height: 3vh;
+
+        .button {
+
+            border-radius: 0.3rem;
+            border: none;
+            background-color: rgb(109, 108, 108);
+            color: white;
+        }
+
+        .selectedButton {
+
+            border-radius: 0.3rem;
+            box-shadow: 1px 1px 10px 1px red;
+
+        }
+    }
+
     .bodyGenresMovies {
 
-        margin-top: 10vh;
+        margin-top: 5vh;
 
         h2 {
             margin: 1vh;
