--- a/src/style/HomeSection.scss
+++ b/src/style/HomeSection.scss
@@ -74,102 +74,177 @@
     }
 }
 
-
 .homeFlexbox {
 
     display: flex;
     flex-direction: column;
     gap: 25px;
 
-    h2 {
-        margin: 1vh;
-        color: white;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    }
+    .sectionsHome {
 
-    .currentMovieSection {
-        display: flex;
-        flex-direction: row;
-        overflow-y: scroll;
-        scrollbar-width: thin;
-        scroll-behavior: smooth;
-    }
+        margin-left: 1rem;
+        margin-right: 1rem;
 
-    .movie {
-        position: relative;
-
-        .link {
-            position: absolute;
-            width: 100%;
-            height: 100%;
+        h2 {
+            margin-top: 5vh;
+            color: white;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
 
-        img {
-            height: 30rem;
-            width: 20rem;
+        .movieAndSerieSection {
+            display: flex;
+            justify-content: left;
+            flex-direction: row;
+            overflow-y: visible;
+            overflow-x: visible;
+            gap: 10px;
+            //height: 50vh;
+            max-width: 100vw;
+
+            button {
+
+                background-color: rgba(0, 0, 0, 0.267);
+                border-radius: 1rem;
+                border: none;
+                height: 23vw;
+
+                svg {
+                    width: 2vw;
+                }
+            }
+        }
+
+        .movieAndSerie {
+            position: relative;
+            width: 17.5vw;
+            height: 23vw;
+
+            .movieAndSerieImage {
+                width: 100%;
+                height: 100%;
+            }
         }
     }
 }
 
-.modal {
+.modalSerie {
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.678);
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
+    height: 110%;
+    width: 145%;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
-    bottom: 0;
-    width: 100%;
+    .link {
+        position: absolute;
+        width: 100%;
+        height: 70%;
+        z-index: 2;
+        top: 0;
+    }
 
-    .modalBody {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 2vh;
-        text-align: center;
+    .imageContainer {
 
-        margin: 1rem;
-        margin-bottom: 2rem;
+        position: relative;
+        height: 70%;
+        width: 100%;
 
-        .infoFlexboxModal {
-            display: flex;
-            flex-direction: row;
-            gap: 1vw;
+        .modalImage {
+            object-fit: cover;
+            height: 100%;
+            width: 100%;
         }
 
-        .modalGenreSection {
+        h2 {
+            position: absolute;
+            color: white;
+            bottom: 0;
+            text-shadow: 2px 2px 2px #000000;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            margin: 1vw;
+            font-size: large;
+        }
+    }
+
+    .info {
+        height: 30%;
+        width: 100%;
+        box-sizing: border-box;
+        background-color: rgb(36, 36, 36);
+        border-radius: 0.2rem;
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0px 2px 13px 8px rgba(0, 0, 0, 0.81);
+        padding-left: 0.5vw;
+        padding-right: 0.5vw;
+        padding-top: 1vh;
+        padding-bottom: 1vh;
+
+        .buttonSection {
+            height: 35%;
+            display: flex;
+            flex-direction: row;
+            gap: 0.5vw;
+
+            button {
+                border: 0.1rem solid rgb(136, 136, 136);
+                border-radius: 50%;
+                box-sizing: border-box;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100%;
+
+                &:hover {
+                    border: 0.1rem solid white;
+                }
+
+                svg {
+                    width: 1vw;
+                    padding: 5px;
+                }
+            }
+        }
+
+        .textSection {
+            display: flex;
+            flex-direction: row;
+            height: 35%;
+            gap: 1.5vw;
+            align-items: center;
+            margin-bottom: 0.5vh;
+
+            p {
+                color: #90fe6c;
+                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+                font-size: medium;
+            }
+        }
+
+        .genreSection {
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
             gap: 0.3vw;
-            align-items: center;
-            justify-content: center;
+            height: 30%;
 
-        }
+            .block {
 
-        .modalGenreBlock {
-            background-color: rgba(75, 75, 75, 0.856);
-            border-radius: 0.2rem;
+                background-color: rgb(71, 71, 71);
+                border-radius: 0.2rem;
+                height: 1.2rem;
 
-            h1 {
-                color: white;
-                font-size: medium;
-                padding: 0.4rem;
-                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
+                .genreLabel {
+                    padding: 0.1rem;
+                    color: white;
+                    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+                    font-size: x-small;
+                }
             }
         }
-
-        h1 {
-            color: white;
-            font-size: x-large;
-
-        }
-
-        h2 {
-            font-size: larger;
-            color: white;
-        }
     }
-
-
 }
