--- a/src/style/MovieDetailStyle.scss
+++ b/src/style/MovieDetailStyle.scss
@@ -125,7 +125,7 @@
         scrollbar-width: thin;
         scroll-behavior: smooth;
 
-        .movie {
+        .movieAndSerie {
             position: relative;
 
             .link {
