--- a/src/style/MyListStyle.scss
+++ b/src/style/MyListStyle.scss
@@ -16,7 +16,7 @@
         display: flex;
         flex-wrap: wrap;
 
-        .movie {
+        .movieAndSerie {
             width: 25%;
 
             position: relative;
