--- a/src/style/HomeSection.scss
+++ b/src/style/HomeSection.scss
@@ -101,7 +101,7 @@
             //height: 50vh;
             max-width: 100vw;
 
-            button {
+            .arrowButton {
 
                 background-color: rgba(0, 0, 0, 0.267);
                 border-radius: 1rem;
@@ -190,7 +190,7 @@
             flex-direction: row;
             gap: 0.5vw;
 
-            button {
+            .buttonModal {
                 border: 0.1rem solid rgb(136, 136, 136);
                 border-radius: 50%;
                 box-sizing: border-box;
@@ -198,6 +198,7 @@
                 justify-content: center;
                 align-items: center;
                 height: 100%;
+                background-color: transparent;
 
                 &:hover {
                     border: 0.1rem solid white;
