--- a/src/style/HomeSection.scss
+++ b/src/style/HomeSection.scss
@@ -84,6 +84,7 @@
 
         margin-left: 1rem;
         margin-right: 1rem;
+        margin-bottom: 3rem;
 
         h2 {
             margin-top: 5vh;
