--- a/src/style/MoviesSectionStyle.scss
+++ b/src/style/MoviesSectionStyle.scss
@@ -11,6 +11,9 @@
             color: white;
             margin-left: 3vh;
             margin-top: 3vh;
+            margin-bottom: 2vh;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
         }
 
         .movieSection {
@@ -20,14 +23,15 @@
             gap: 4vh;
             align-items: center;
             justify-content: center;
+            height: 100%;
 
             .trendingMoviecard {
 
-                width: 18%;
                 position: relative;
 
                 img {
-                    width: 100%;
+                    height: 50vh;
+                    width: 17.5vw;
                 }
 
                 .classement {
@@ -58,6 +62,7 @@
     }
 
     .filterTitle {
+        margin-left: 1vw;
         margin-top: 5vh;
         display: flex;
         flex-direction: row;
@@ -76,7 +81,7 @@
 
     .filterButtonSection {
         margin-top: 2vh;
-        margin-left: 1vw;
+        margin-left: 2vw;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
