--- a/src/style/HomeSection.scss
+++ b/src/style/HomeSection.scss
@@ -88,6 +88,7 @@
 
         h2 {
             margin-top: 5vh;
+            margin-bottom: 2vh;
             color: white;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
@@ -99,7 +100,6 @@
             overflow-y: visible;
             overflow-x: visible;
             gap: 10px;
-            //height: 50vh;
             max-width: 100vw;
 
             .arrowButton {
@@ -168,6 +168,22 @@
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             margin: 1vw;
             font-size: large;
+
+            @media screen and (max-width: 1400px) {
+                font-size: medium;
+            }
+
+            @media screen and (max-width: 900px) {
+                font-size: small;
+            }
+
+            @media screen and (max-width: 600px) {
+                font-size: xx-small;
+            }
+
+            @media screen and (max-width: 400px) {
+                font-size: 5px;
+            }
         }
     }
 
@@ -188,8 +204,10 @@
         .buttonSection {
             height: 35%;
             display: flex;
+            align-items: center;
             flex-direction: row;
             gap: 0.5vw;
+            margin-top: 0.5vh;
 
             .buttonModal {
                 border: 0.1rem solid rgb(136, 136, 136);
@@ -198,32 +216,49 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                height: 100%;
+                height: 2.2rem;
+                width: 2.2rem;
                 background-color: transparent;
+
+                @media screen and (max-width: 1400px) {
+                    height: 2rem;
+                    width: 2rem;
+
+                }
+
+                @media screen and (max-width: 1000px) {
+                    height: 1rem;
+                    width: 1rem;
+                }
+
+                @media screen and (max-width: 600px) {
+                    height: 0.5rem;
+                    width: 0.5rem;
+                }
 
                 &:hover {
                     border: 0.1rem solid white;
                 }
-
-                svg {
-                    width: 1vw;
-                    padding: 5px;
-                }
             }
-        }
-
-        .textSection {
-            display: flex;
-            flex-direction: row;
-            height: 35%;
-            gap: 1.5vw;
-            align-items: center;
-            margin-bottom: 0.5vh;
 
             p {
+                margin-left: 0.5vw;
                 color: #90fe6c;
                 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-                font-size: medium;
+                font-size: 90%;
+
+                @media screen and (max-width: 1200px) {
+                    font-size: 70%;
+                }
+
+                @media screen and (max-width: 900px) {
+                    font-size: 40%;
+                }
+
+                @media screen and (max-width: 600px) {
+                    font-size: 30%;
+
+                }
             }
         }
 
@@ -232,19 +267,42 @@
             flex-direction: row;
             flex-wrap: wrap;
             gap: 0.3vw;
-            height: 30%;
+            height: 70%;
+            margin-top: 2vh;
 
             .block {
-
+                display: flex;
+                align-items: center;
                 background-color: rgb(71, 71, 71);
                 border-radius: 0.2rem;
-                height: 1.2rem;
+                height: 3vh;
+
+                @media screen and (max-width: 1200px) {
+                    height: 2.5vh;
+                }
 
                 .genreLabel {
-                    padding: 0.1rem;
+                    padding: 0.3rem;
                     color: white;
                     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-                    font-size: x-small;
+                    font-size: small;
+
+                    @media screen and (max-width: 1400px) {
+                        padding: 0.2rem;
+                        font-size: x-small;
+                    }
+
+                    @media screen and (max-width: 1200px) {
+                        font-size: xx-small;
+                    }
+
+                    @media screen and (max-width: 800px) {
+                        font-size: 10px;
+                    }
+
+                    @media screen and (max-width: 400px) {
+                        font-size: 4px;
+                    }
                 }
             }
         }
