--- a/src/style/Nav.scss
+++ b/src/style/Nav.scss
@@ -6,13 +6,13 @@
     align-items: center;
     background-color: rgba(0, 0, 0, 0.596);
     height: 10vh;
-    gap: 25px;
+    gap: 2vw;
     z-index: 1000;
 
     img {
         margin-left: 1rem;
         margin-right: 1rem;
-        max-height: 100%;
+        max-height: 85%;
     }
 
     .buttonContainer {
@@ -30,6 +30,7 @@
             color: white;
             text-decoration: 'none';
             font-size: x-large;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
             &:focus,
             &:hover,
